--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-vscode-portfolio",
   "version": "0.1.0",
-  "homepage": "https://noworneverev.github.io",
+  "homepage": "https://mirabor.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
