--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b redo -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
